Added placeholder for height, weight, gender

--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.1.3",
+    "@react-three/fiber": "^8.16.1",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "expo-three": "^7.0.0",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-web": "~0.19.6",
+    "three": "^0.145.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
